# pirb

./: .gitignore  Dockerfile  README.md  data.py  prepare_queries_for_rag.py  pyproject.toml  requirements.txt  run_benchmark.py  run_build_hybrid.py  run_compare_models.py  run_compute_stats.py  run_llm_rescoring.py  run_score_negatives.py
backend/: __init__.py  base.py  dense.py  dense_qdrant.py  late_interaction.py  sparse.py  sparse_seismic.py  sparse_splade.py
config/api/: gemini-embedding-001.json  gemini-embedding-2-preview.json  mistral-embed-2312.json  text-embedding-3-large.json
config/benchmarks/: airbench.json  nanobeir-multi.json  nanobeir.json  picopirb.json  pirb.json
config/hybrids/: bm25+mmlw-retrieval-e5-base.json  splade+mmlw-retrieval-e5-base.json  splade+mmlw-retrieval-e5-large.json
config/late_interaction/: jina-colbert-v2-reranker.json  jina-colbert-v2.json
config/llm/: Jasper-Token-Compression-600M.json  Octen-Embedding-0.6B.json  Octen-Embedding-4B.json  Qwen3-Embedding-0.6B-vllm.json  Qwen3-Embedding-0.6B.json  Qwen3-Embedding-4B.json  Qwen3-Embedding-8B.json  Qwen3-Reranker-0.6B-vllm.json  Qwen3-Reranker-0.6B.json  Qwen3-Reranker-4B.json  bge-multilingual-gemma2.json  bge-reranker-v2-gemma.json  bge-reranker-v2.5-gemma2-lightweight-2.json  bge-reranker-v2.5-gemma2-lightweight.json  gte-Qwen2-1.5B.json  gte-Qwen2-7B.json  inf-retriever-v1-1.5b.json  inf-retriever-v1.json  llama-nemotron-embed-1b-v2.json  pplx-embed-v1-4b.json  stella-pl-retrieval-8k.json
config/mmlw/: mmlw-retrieval-e5-base.json  mmlw-retrieval-roberta-base.json  mmlw-retrieval-roberta-large-v2.json  mmlw-roberta-base.json
config/rerankers/: ctxl-rerank-v2-2b.json  gte-multilingual-reranker-base.json  herbert-base-reranker-msmarco.json  (+5 more)
docker/: .dockerignore  Dockerfile  flag.Dockerfile  requirements.txt  requirements_flag.txt  vllm.Dockerfile
scripts/: chunk_dataset.py
search/: __init__.py  base.py  bm25.py  dense.py  hybrid.py  late_interaction.py  lucene.py  reranker.py  splade.py
utils/: stemming.py  system.py
(+121 files in other folders)
