[project]
name = "pirb"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "transformers",
    "accelerate",
    "datasets",
    "sentence-transformers>=3.1.1",
    "scikit-learn>=1.2.1",
    "tqdm>=4.67.3",
    "joblib>=1.2.1",
    "rust-fst",
    "bm25s",
    "faiss-cpu",
    "xgboost"
]

[project.optional-dependencies]
cpu = [
    "torch==2.12.0",
]
cu130 = [
    "torch==2.12.0",
    "flash-attn==2.8.3+cu130torch2.12; sys_platform == 'linux' or sys_platform == 'win32'"
]
cu132 = [
    "torch==2.12.0",
    "flash-attn==2.8.3+cu132torch2.12; sys_platform == 'linux' or sys_platform == 'win32'"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
    { index = "pytorch-cu132", extra = "cu132" },
]
flash-attn = [
    { index = "flash-attn-windows", marker = "sys_platform == 'win32'" },
    { index = "flash-attn-linux", marker = "sys_platform == 'linux'" },
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cu130" },
        { extra = "cu132" },
    ],
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[[tool.uv.index]]
name = "flash-attn-windows"
url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/expanded_assets/v0.9.26"
format = "flat"
explicit = true

[[tool.uv.index]]
name = "flash-attn-linux"
url = "https://github.com/mjun0812/flash-attention-prebuild-wheels/releases/expanded_assets/v0.9.17"
format = "flat"
explicit = true

[tool.setuptools.packages.find]
include = ["search*", "utils*"]
exclude = ["config*", "docker*", "benchmarks*", "data*", "cache*"]
